--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/button/Button.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/button/Button.scss
@@ -32,10 +32,16 @@ $button-default-glyph-opacity: 1;
 $button-toolbar-color: $color-night-rider;
 $button-toolbar-color-over: $color-night-rider;
 $button-toolbar-color-focus: $color-night-rider;
-$button-toolbar-color-pressed: $color-night-rider;
+$button-toolbar-color-pressed: $color-white;
 $button-toolbar-color-disabled: $color-night-rider;
 
 $button-toolbar-glyph-color: $color-night-rider;
 $button-toolbar-glyph-opacity: 1;
 
 $button-disabled-opacity: 0.5;
+
+$button-toolbar-background-gradient: $color-white $color-light-gainsboro;
+$button-toolbar-background-gradient-over: $color-light-gray $color-silver;
+$button-toolbar-background-gradient-focus: $color-white $color-light-gainsboro;
+$button-toolbar-background-gradient-pressed: $color-suva-gray $color-gray;
+$button-toolbar-background-gradient-disabled: $color-white $color-light-gainsboro;
