Lightens the hover state of links, changes hue from red to blue

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
@@ -125,11 +125,11 @@ a:not([class*="x-"]) {
   text-decoration: none;
 
   &:visited {
-    color: $color-smalt;
+    color: $color-dark-denim;
   }
 
   &:focus, &:hover {
-    color: $color-falu-red;
+    color: $color-dark-cerulean;
     text-decoration: underline;
   }
 
