--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/toolbar/TextItem.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/toolbar/TextItem.scss
@@ -33,6 +33,7 @@
  * cls: 'feature-description'
  */
 .feature-description {
-  font-size: $font-size-utility;
+  font-size: $font-size-body;
+  font-weight: $font-weight-body;
   top: 21px !important;
 }
