Turns off textarea wrapping in a cross-browser compliant way

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
@@ -13910,9 +13910,9 @@
 .log-viewer-field textarea {
   font-family: "Courier New", Courier, monospace;
   font-size: 13px;
-  white-space: pre;
+  /*white-space: pre;
   word-wrap: normal;
-  overflow-x: scroll;
+  overflow-x: scroll;*/
 }
 
 /**
