Gives fieldsets a right margin so they don't flow offscreen

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/Fieldset.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/Fieldset.scss
@@ -3,14 +3,15 @@
  */
 
 .nx-optionalfieldset {
-  margin: 10px 0 0 0;
+  margin: 10px 25px 0 0;
 
   .x-fieldset-body {
     background-color: $color-light-smoke;
     border: 1px solid $color-light-gray;
-    padding: 5px 0 10px 20px;
+    padding: 5px 20px 10px 20px;
     position: relative;
-    left: 25px;
+    margin-left: 25px;
+    width: auto !important;
   }
 
   // Give child elements a background opacity instead of a color
