Gives custom form controls a red outline when invalid

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/ux/form/MultiSelect.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/ux/form/MultiSelect.scss
@@ -24,3 +24,11 @@
     border: 1px $color-gainsboro solid !important;
   }
 }
+
+.x-form-fieldcontainer.nx-invalid {
+  .nx-multiselect:nth-child(3) {
+    .x-panel-body {
+      border: 1px #CF4C35 solid !important;
+    }
+  }
+}
